--- a/multyvender/src/app/component/nav/nav.component.html
+++ b/multyvender/src/app/component/nav/nav.component.html
@@ -14,17 +14,16 @@
             <a class="nav-link" [routerLink]="['/shop']">Shop</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" [routerLink]="['/about']">About</a>
           </li>
         </ul>
-
 
         
     
         <ul class="nav justify-content-center navbar-light ">
          
           <li class="nav-item">
-            <a class="nav-link" href="#"><i class="bi bi-bag-check-fill"></i></a>
+            <a class="nav-link" [routerLink]="['/cart']"><i class="bi bi-bag-check-fill"></i></a>
           </li>
          
 
