--- a/multyvender/src/app/component/additem/additem.component.css
+++ b/multyvender/src/app/component/additem/additem.component.css
@@ -1501,8 +1501,7 @@
   }
   
   .table tbody + tbody {
-    border-top: 2px
-   solid #e3e6f0;
+    border-top: 2px solid #e3e6f0;
   }
   
   .table-sm th,
