--- a/multyvender/src/app/component/additem/additem.component.html
+++ b/multyvender/src/app/component/additem/additem.component.html
@@ -126,9 +126,9 @@
                         </div>
 
                         <div class="form-floating">
-                            <textarea class="form-control" placeholder="Leave a comment here"
+                            <textarea class="form-control" placeholder="Product Description"
                                 id="floatingTextarea" style="height: 150px;"></textarea>
-                            <label for="floatingTextarea">Comments</label>
+                            <label for="floatingTextarea">Product Description</label>
                         </div>
                         
                             
