--- a/multyvender/src/app/component/adminsidebar/adminsidebar.component.html
+++ b/multyvender/src/app/component/adminsidebar/adminsidebar.component.html
@@ -50,7 +50,7 @@
 
     <!-- Nav Item - Orsers -->
     <li class="nav-item">
-        <a class="nav-link" href="charts.html">
+        <a class="nav-link" [routerLink]="['/orders']">
             <i class="fas fa-fw fa-chart-area"></i>
             <span>Orsers</span></a>
     </li>
