--- a/multyvender/src/app/component/adminsidebar/adminsidebar.component.html
+++ b/multyvender/src/app/component/adminsidebar/adminsidebar.component.html
@@ -35,7 +35,7 @@
 
     <!-- Nav Item - Upadate Product -->
     <li class="nav-item">
-        <a class="nav-link" href="charts.html">
+        <a class="nav-link" [routerLink]="['/updateitem']">
             <i class="fas fa-fw fa-chart-area"></i>
             <span>Upadate Product</span></a>
     </li>
