--- a/multyvender/src/app/component/register/register.component.html
+++ b/multyvender/src/app/component/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="con">
-    <h2>LOGIN</h2>
+    <h2>REGISTER</h2>
 <form>
     <!-- Email input -->
     <div class="form-outline mb-4">
@@ -12,14 +12,20 @@
       <input type="password" id="form2Example2" class="form-control" />
       <label class="form-label" for="form2Example2">Password</label>
     </div>
+
+     <!-- Re Password input -->
+     <div class="form-outline mb-4">
+        <input type="password" id="form2Example2" class="form-control" />
+        <label class="form-label" for="form2Example2">Re-Password</label>
+      </div>
   
   
     <!-- Submit button -->
-    <button type="button" class="btn btn-primary btn-block mb-4">Sign in</button>
+    <button type="button" class="btn btn-primary btn-block mb-4">Register</button>
   
     <!-- Register buttons -->
     <div class="text-center">
-      <p>Not a member? <a [routerLink]="['/register']">Register</a></p>
+      <p>ALREADY a member? <a [routerLink]="['/login']">Login</a></p>
       
     </div>
   </form>
