--- a/multyvender/src/app/component/home/home.component.html
+++ b/multyvender/src/app/component/home/home.component.html
@@ -115,7 +115,7 @@
                   class="w-100" />
               </div>
               <div class="card-body">
-                <a href="" class="text-reset">
+                <a [routerLink]="['/product/', product._id]" class="text-reset" >
                   <h5 class="card-title mb-3">{{product.title}}</h5>
                 </a>
                 <a href="" class="text-reset">
