--- a/multyvender/src/app/component/product/product.component.html
+++ b/multyvender/src/app/component/product/product.component.html
@@ -4,11 +4,12 @@
 <div class="container mt-5 mb-5">
     <div class="row d-flex justify-content-center">
         <div class="col-md-10">
-            <div class="card">
-                <div class="row">
+            <div class="card" *ngFor="let product of products">
+
+                <div class="row" *ngIf="product._id == id">
                     <div class="col-md-6">
                         <div class="images ">
-                            <div class="text-center"> <img id="main-image" src="https://i.imgur.com/Dhebu4F.jpg" width="500" /> </div> 
+                            <div class="text-center"> <img id="main-image" src="{{product.img}}" width="500" /> </div>
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -17,14 +18,12 @@
                                 <div class="d-flex align-items-center"> <i class="fa fa-long-arrow-left"></i> <span class="ml-1">Back</span> </div> <i class="fa fa-shopping-cart text-muted"></i>
                             </div>
                             <div class="mt-4 mb-3"> <span class="text-uppercase text-muted brand">Orianz</span>
-                                <h4 class="text-uppercase">Men's slim fit t-shirt</h4>
-                                <div class="price d-flex flex-row align-items-center"> <span class="act-price">$20</span>
-                                    <div class="ml-2"> <small class="dis-price">$59</small> <span>40% OFF</span> </div>
+                                <h4 class="text-uppercase">{{product.title}}</h4>
+                                <div class="price d-flex flex-row align-items-center"> <span class="act-price">RS. {{product.price}}</span>
+                                    <div class="ml-2"><br><br> <span>     {{product.discount}}</span> </div>
                                 </div>
                             </div>
-                            <p class="about mt-5">Shop from a wide range of t-shirt from orianz. Pefect for your everyday use, you could pair it with a stylish pair of jeans or trousers complete the look.
-                                range of t-shirt from orianz. Pefect for your everyday use, you could pair it with a stylish pair of jeans or trousers complete the look.
-                            </p>
+                            <p class="about mt-5">{{product.dis}} </p>
                             <div class="row">
                                 <div class="col-md-3">
                                 <div class="cart mt-4 align-items-center"> <button class="btn btn-danger text-uppercase ">Buy Now</button> <i class="fa fa-heart text-muted"></i> <i class="fa fa-share-alt text-muted"></i> </div>
@@ -35,6 +34,8 @@
                         </div>
                     </div>
                 </div>
+
+
             </div>
         </div>
     </div>
