--- a/multyvender/src/app/component/register/register.component.html
+++ b/multyvender/src/app/component/register/register.component.html
@@ -1,12 +1,25 @@
 <div class="con">
     <h2>REGISTER</h2>
 <form>
+  <!-- Name input -->
+  <div class="form-outline mb-4">
+    <input type="text" id="form2Example1" class="form-control" />
+    <label class="form-label" for="form2Example1">Name</label>
+  </div>
+
+
     <!-- Email input -->
     <div class="form-outline mb-4">
       <input type="email" id="form2Example1" class="form-control" />
       <label class="form-label" for="form2Example1">Email address</label>
     </div>
-  
+
+    <!-- tel input -->
+    <div class="form-outline mb-4">
+      <input type="text" id="form2Example1" class="form-control" />
+      <label class="form-label" for="form2Example1">Telephone Number</label>
+    </div>
+
     <!-- Password input -->
     <div class="form-outline mb-4">
       <input type="password" id="form2Example2" class="form-control" />
@@ -18,15 +31,15 @@
         <input type="password" id="form2Example2" class="form-control" />
         <label class="form-label" for="form2Example2">Re-Password</label>
       </div>
-  
-  
+
+
     <!-- Submit button -->
     <button type="button" class="btn btn-primary btn-block mb-4">Register</button>
-  
+
     <!-- Register buttons -->
     <div class="text-center">
       <p>ALREADY a member? <a [routerLink]="['/login']">Login</a></p>
-      
+
     </div>
   </form>
 
