fix product page

--- a/multyvender/src/app/component/home/home.component.html
+++ b/multyvender/src/app/component/home/home.component.html
@@ -112,7 +112,7 @@
               <div class="bg-image hover-zoom ripple ripple-surface ripple-surface-light"
                 data-mdb-ripple-color="light">
                 <img src="{{product.img}}"
-                  class="w-100" />
+                  class="" height="400" />
               </div>
               <div class="card-body">
                 <a [routerLink]="['/product/', product._id]" class="text-reset" >
