--- a/multyvender/src/app/component/product/product.component.html
+++ b/multyvender/src/app/component/product/product.component.html
@@ -2,38 +2,38 @@
 
 
 <div class="container mt-5 mb-5">
-    <div class="row d-flex justify-content-center">
+    <div class="row ">
         <div class="col-md-10">
             <div class="card" *ngFor="let product of products">
 
                 <div class="row" *ngIf="product._id == id">
+
                     <div class="col-md-6">
-                        <div class="images ">
-                            <div class="text-center"> <img id="main-image" src="{{product.img}}" width="500" /> </div>
+                        <div class="images m-3">
+                            <div class="text-center"> <img id="main-image" src="{{product.img}}"  height="400"/> </div>
                         </div>
                     </div>
+
+
                     <div class="col-md-6">
-                        <div class="product p-4">
-                            <div class="d-flex justify-content-between align-items-center">
+                        <div class="p-4 m-3">
+                            <div class="">
                                 <div class="d-flex align-items-center"> <i class="fa fa-long-arrow-left"></i> <span class="ml-1">Back</span> </div> <i class="fa fa-shopping-cart text-muted"></i>
                             </div>
                             <div class="mt-4 mb-3"> <span class="text-uppercase text-muted brand">Orianz</span>
-                                <h4 class="text-uppercase">{{product.title}}</h4>
-                                <div class="price d-flex flex-row align-items-center"> <span class="act-price">RS. {{product.price}}</span>
-                                    <div class="ml-2"><br><br> <span>     {{product.discount}}</span> </div>
+                                <h4 class="text-uppercase">{{product.title}} </h4>
+                                <div class="price d-flex flex-row align-items-center"> <span class="act-price">RS. {{product.price}} </span>
+                                    <div class="mx-2"> <span> {{product.discount}}</span> </div>
                                 </div>
                             </div>
                             <p class="about mt-5">{{product.dis}} </p>
-                            <div class="row">
-                                <div class="col-md-3">
-                                <div class="cart mt-4 align-items-center"> <button class="btn btn-danger text-uppercase ">Buy Now</button> <i class="fa fa-heart text-muted"></i> <i class="fa fa-share-alt text-muted"></i> </div>
+                                <div class="cart mt-4 "> 
+                                    <button class="btn btn-danger text-uppercase mx-1">Buy Now</button> 
+                                    <button class="btn btn-info text-uppercase mx-1">Chat Now</button>
                                 </div>
-                                <div class="col-md-3">
-                                <div class="cart mt-4 align-items-center"> <button class="btn btn-success text-uppercase "><i class="bi bi-chat-left-dots-fill"></i></button></div>
-                                </div>
-                        </div>
                     </div>
                 </div>
+                
 
 
             </div>
