--- a/multyvender/src/app/component/usersidebar/usersidebar.component.html
+++ b/multyvender/src/app/component/usersidebar/usersidebar.component.html
@@ -20,28 +20,28 @@
     <hr class="sidebar-divider">
 
     <!-- Heading -->
-    <div class="sidebar-heading">
+    <!-- <div class="sidebar-heading">
         Interface
-    </div>
+    </div> -->
 
     
     <!-- Nav Item - Add product -->
-    <li class="nav-item">
+    <!-- <li class="nav-item">
         <a class="nav-link" [routerLink]="['/additem']">
             <i class="fas fa-fw fa-chart-area"></i>
             <span>Add Product</span></a>
     </li>
-        
+         -->
 
     <!-- Nav Item - Upadate Product -->
-    <li class="nav-item">
+    <!-- <li class="nav-item">
         <a class="nav-link" [routerLink]="['/updateitem']">
             <i class="fas fa-fw fa-chart-area"></i>
             <span>Upadate Product</span></a>
-    </li>
+    </li> -->
 
     <!-- Divider -->
-    <hr class="sidebar-divider">
+    <!-- <hr class="sidebar-divider"> -->
 
     <!-- Heading -->
     <div class="sidebar-heading">
@@ -49,11 +49,11 @@
     </div>
 
     <!-- Nav Item - Orsers -->
-    <li class="nav-item">
+    <!-- <li class="nav-item">
         <a class="nav-link" [routerLink]="['/orders']">
             <i class="fas fa-fw fa-chart-area"></i>
             <span>Orsers</span></a>
-    </li>
+    </li> -->
 
 
     <!-- Nav Item - Message -->
