--- a/multyvender/src/app/component/login/login.component.html
+++ b/multyvender/src/app/component/login/login.component.html
@@ -1,27 +1,29 @@
 <div class="con">
     <h2>LOGIN</h2>
-<form>
+
+    <p>{{err}}</p>
+
     <!-- Email input -->
     <div class="form-outline mb-4">
-      <input type="email" id="form2Example1" class="form-control" />
+      <input type="email" [(ngModel)]="email" id="form2Example1" class="form-control" />
       <label class="form-label" for="form2Example1">Email address</label>
     </div>
-  
+
     <!-- Password input -->
     <div class="form-outline mb-4">
-      <input type="password" id="form2Example2" class="form-control" />
+      <input type="password" [(ngModel)]="password" id="form2Example2" class="form-control" />
       <label class="form-label" for="form2Example2">Password</label>
     </div>
-  
-  
+
+
     <!-- Submit button -->
-    <button type="button" class="btn btn-primary btn-block mb-4">Sign in</button>
-  
+    <button type="button" (click)="login()" class="btn btn-primary btn-block mb-4">Sign in</button>
+
     <!-- Register buttons -->
     <div class="text-center">
       <p>Not a member? <a [routerLink]="['/register']">Register</a></p>
-      
+
     </div>
-  </form>
+
 
   </div>
