--- a/multyvender/src/app/component/register/register.component.html
+++ b/multyvender/src/app/component/register/register.component.html
@@ -3,32 +3,32 @@
 <form>
   <!-- Name input -->
   <div class="form-outline mb-4">
-    <input type="text" id="form2Example1" class="form-control" />
+    <input type="text" [(ngModel)]="name" id="form2Example1" class="form-control" />
     <label class="form-label" for="form2Example1">Name</label>
   </div>
 
 
     <!-- Email input -->
     <div class="form-outline mb-4">
-      <input type="email" id="form2Example1" class="form-control" />
+      <input type="email" [(ngModel)]="email" id="form2Example1" class="form-control" />
       <label class="form-label" for="form2Example1">Email address</label>
     </div>
 
     <!-- tel input -->
     <div class="form-outline mb-4">
-      <input type="text" id="form2Example1" class="form-control" />
+      <input type="text" [(ngModel)]="tel" id="form2Example1" class="form-control" />
       <label class="form-label" for="form2Example1">Telephone Number</label>
     </div>
 
     <!-- Password input -->
     <div class="form-outline mb-4">
-      <input type="password" id="form2Example2" class="form-control" />
+      <input type="password" [(ngModel)]="password" id="form2Example2" class="form-control" />
       <label class="form-label" for="form2Example2">Password</label>
     </div>
 
      <!-- Re Password input -->
      <div class="form-outline mb-4">
-        <input type="password" id="form2Example2" class="form-control" />
+        <input type="password" [(ngModel)]="repassword" id="form2Example2" class="form-control" />
         <label class="form-label" for="form2Example2">Re-Password</label>
       </div>
 
