--- a/multyvender/src/app/component/shop/shop.component.html
+++ b/multyvender/src/app/component/shop/shop.component.html
@@ -4,7 +4,7 @@
 <img src="assets/img2.jpeg" class="img-fluid" alt="...">
 <!-- banner end -->
 <section style="background-color: #eee;">
-    <div class="container py-2" *ngFor="let product of products">
+    <div class="container py-2 " *ngFor="let product of products">
 
 
       <div class="row justify-content-center mb">
@@ -15,7 +15,7 @@
                 <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                   <div class="bg-image hover-zoom ripple rounded ripple-surface">
                     <img src="{{product.img}}"
-                      class="w-100" />
+                      class="w-100" height="200"/>
                     <a href="#!">
                       <div class="hover-overlay">
                         <div class="mask" style="background-color: rgba(253, 253, 253, 0.15);"></div>
