updated product, register, order

--- a/multyvender/src/app/component/register/register.component.html
+++ b/multyvender/src/app/component/register/register.component.html
@@ -1,6 +1,7 @@
 <div class="con">
+  <p>{{err}}</p>
     <h2>REGISTER</h2>
-<form>
+
   <!-- Name input -->
   <div class="form-outline mb-4">
     <input type="text" [(ngModel)]="name" id="form2Example1" class="form-control" />
@@ -34,13 +35,13 @@
 
 
     <!-- Submit button -->
-    <button type="button" class="btn btn-primary btn-block mb-4">Register</button>
+    <button type="button" (click)="addaddUser()" class="btn btn-primary btn-block mb-4">Register</button>
 
     <!-- Register buttons -->
     <div class="text-center">
       <p>ALREADY a member? <a [routerLink]="['/login']">Login</a></p>
 
     </div>
-  </form>
+
 
   </div>
