--- a/multyvender/src/app/component/user/user.component.html
+++ b/multyvender/src/app/component/user/user.component.html
@@ -83,7 +83,8 @@
                                             <th scope="col">Unit Price</th>
                                             <th scope="col">Quantity</th>
                                             <th scope="col">Seller</th>
-                                            <th></th>
+                                            <th scope="col">Rating</th>
+                                           
 
                                         </tr>
                                     </thead>
@@ -94,7 +95,8 @@
                                             <td>data</td>
                                             <td>data</td>
                                             <td>data</td>
-                                            <td><button type="button" class="btn btn-success mx-2">Rate</button> 
+                                            <td><button type="button" class="btn btn-success mx-2">Positive</button> 
+                                                <button type="button" class="btn btn-danger mx-2">Negative</button> </td>
                                             
 
                                         </tr>
