--- a/multyvender/src/app/component/updateitem/updateitem.component.html
+++ b/multyvender/src/app/component/updateitem/updateitem.component.html
@@ -72,7 +72,7 @@
                     <div class="container-fluid pt-2 px-4">
                         <div class="bg-secondary text-center rounded p-4">
                             <div class="d-flex align-items-center justify-content-between mb-4">
-                                <h6 class="mb-0">Orders</h6>
+                                <h6 class="mb-0">Items</h6>
                                 <a href="">Show All</a>
                             </div>
                             <div class="table-responsive">
