--- a/multyvender/src/app/component/nav/nav.component.html
+++ b/multyvender/src/app/component/nav/nav.component.html
@@ -1,50 +1,55 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light"> 
-  
-    <div class="container-fluid">
-      <a class="navbar-brand" [routerLink]="['/home']">LOGO</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" [routerLink]="['/home']">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/shop']">Shop</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/about']">About</a>
-          </li>
-        </ul>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-        
-    
-        <ul class="nav justify-content-center navbar-light ">
-         
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/cart']"><i class="bi bi-bag-check-fill"></i></a>
-          </li>
-         
-
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <img src="assets/img2.jpeg" class="rounded-circle" height="25px" width="25px" alt="Cinque Terre">
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="customerprofile.php">Profile</a></li>
-            <li><a class="dropdown-item" href="customerprofile.php">Settings</a></li>
-            <li>
-              <hr class="dropdown-divider">
-            </li>
-            <li><a class="dropdown-item"href="logout.php">Log out</a></li>
-          </ul>
+  <div class="container-fluid">
+    <a class="navbar-brand" [routerLink]="['/home']">LOGO</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" [routerLink]="['/home']">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/shop']">Shop</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/about']">About</a>
         </li>
       </ul>
 
-        <!-- <form class="d-flex">
+
+
+      <ul class="nav justify-content-center navbar-light ">
+
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/cart']"><i class="bi bi-bag-check-fill"></i></a>
+        </li>
+
+
+
+        <li class="nav-item dropdown">
+
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
+            <img src="assets/img2.jpeg" class="rounded-circle" height="25px" width="25px" alt="Cinque Terre">
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+             <li><a class="dropdown-item" href="customerprofile.php">Profile</a></li>
+             <li><a class="dropdown-item" href="customerprofile.php">Settings</a></li>
+             <li>
+              <hr class="dropdown-divider">
+             </li>
+             <li><a class="dropdown-item" href="logout.php">Log out</a></li>
+          </ul>
+
+        </li>
+      </ul>
+
+      <!-- <form class="d-flex">
           <i class="bi bi-bag-check-fill"></i>
         </form>
       </div>
     </div> -->
-  <!-- </nav> -->
+      <!-- </nav> -->
