--- a/multyvender/src/app/component/product/product.component.html
+++ b/multyvender/src/app/component/product/product.component.html
@@ -27,13 +27,13 @@
                                 </div>
                             </div>
                             <p class="about mt-5">{{product.dis}} </p>
-                                <div class="cart mt-4 "> 
-                                    <button class="btn btn-danger text-uppercase mx-1">Buy Now</button> 
+                                <div class="cart mt-4 ">
+                                    <button (click)="buynow()" class="btn btn-danger text-uppercase mx-1">Buy Now</button>
                                     <button class="btn btn-info text-uppercase mx-1">Chat Now</button>
                                 </div>
                     </div>
                 </div>
-                
+
 
 
             </div>
