--- a/multyvender/src/app/component/nav/nav.component.html
+++ b/multyvender/src/app/component/nav/nav.component.html
@@ -26,7 +26,7 @@
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/cart']"><i class="bi bi-bag-check-fill"></i></a>
         </li>
-
+        src="assets/img2.jpeg"
 
 
         <li class="nav-item dropdown">
@@ -35,12 +35,11 @@
             aria-expanded="false">
             <img src="assets/img2.jpeg" class="rounded-circle" height="25px" width="25px" alt="Cinque Terre">
           </a>
+
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
              <li><a class="dropdown-item" href="customerprofile.php">Profile</a></li>
              <li><a class="dropdown-item" href="customerprofile.php">Settings</a></li>
-             <li>
-              <hr class="dropdown-divider">
-             </li>
+             
              <li><a class="dropdown-item" href="logout.php">Log out</a></li>
           </ul>
 
