--- a/multyvender/src/app/component/nav/nav.component.html
+++ b/multyvender/src/app/component/nav/nav.component.html
@@ -1,3 +1,4 @@
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
   <div class="container-fluid">
@@ -26,13 +27,12 @@
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/cart']"><i class="bi bi-bag-check-fill"></i></a>
         </li>
-        src="assets/img2.jpeg"
 
+        <button type="button" class="btn btn-danger">Log out</button>
 
-        <li class="nav-item dropdown">
+        <!-- <li class="nav-item dropdown">
 
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-            aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
             <img src="assets/img2.jpeg" class="rounded-circle" height="25px" width="25px" alt="Cinque Terre">
           </a>
 
@@ -43,7 +43,8 @@
              <li><a class="dropdown-item" href="logout.php">Log out</a></li>
           </ul>
 
-        </li>
+        </li> -->
+
       </ul>
 
       <!-- <form class="d-flex">
