--- a/multyvender/src/app/component/usersidebar/usersidebar.component.html
+++ b/multyvender/src/app/component/usersidebar/usersidebar.component.html
@@ -11,7 +11,7 @@
 
     <!-- Nav Item - Dashboard -->
     <li class="nav-item active">
-        <a class="nav-link" [routerLink]="['/admin']">
+        <a class="nav-link" [routerLink]="['/user']">
             <i class="fas fa-fw fa-tachometer-alt"></i>
             <span>Dashboard</span></a>
     </li>
