--- a/multyvender/src/app/component/adminsidebar/adminsidebar.component.html
+++ b/multyvender/src/app/component/adminsidebar/adminsidebar.component.html
@@ -37,7 +37,7 @@
     <li class="nav-item">
         <a class="nav-link" [routerLink]="['/updateitem']">
             <i class="fas fa-fw fa-chart-area"></i>
-            <span>Upadate Product</span></a>
+            <span>All Product</span></a>
     </li>
 
     <!-- Divider -->
@@ -58,7 +58,7 @@
 
     <!-- Nav Item - Message -->
     <li class="nav-item">
-        <a class="nav-link" href="tables.html">
+        <a class="nav-link" [routerLink]="['/chat']">
             <i class="fas fa-fw fa-table"></i>
             <span>Message</span></a>
     </li>
