--- a/multyvender/src/app/component/about/about.component.html
+++ b/multyvender/src/app/component/about/about.component.html
@@ -1,2 +1,39 @@
-<p>about works!</p>
-{{name}}
+<app-nav></app-nav>
+
+<!-- banner start -->
+<img src="assets/img2.jpeg" class="img-fluid" alt="...">
+<!-- banner end -->
+
+
+<div class="con">
+
+<div class="con2 mx-5 text-center">
+<div class="c1 px-4 mt-3">
+<h4>Our Vision</h4>
+<p>
+Lorem Ipsum is simply dummy text of the of Lorem Ipsum.
+</p>
+</div>
+
+
+<div class="c1 px-4 mt-3">
+<h4>Our Story</h4>
+<p>
+Lorem since not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+</p>
+</div>
+
+
+
+
+
+<div class="c1 px-4 mt-3">
+<h4>Our Mission</h4>
+<p>
+Lorem Ipsum is simply standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+</div>
+
+</div>
+</div>
+  <!-- conten start -->
+<app-footer></app-footer>
