--- a/multyvender/src/app/component/nav/nav.component.html
+++ b/multyvender/src/app/component/nav/nav.component.html
@@ -28,6 +28,7 @@
           <a class="nav-link" [routerLink]="['/cart']"><i class="bi bi-bag-check-fill"></i></a>
         </li>
 
+        <button type="button" class="btn btn-success mx-2" [routerLink]="['/user']">Dashboard</button>
         <button type="button" class="btn btn-danger">Log out</button>
 
         <!-- <li class="nav-item dropdown">
