--- a/multyvender/src/app/component/shop/shop.component.html
+++ b/multyvender/src/app/component/shop/shop.component.html
@@ -26,7 +26,7 @@
                 <div class="col-md-6 col-lg-6 col-xl-6">
                   <h5>{{product.title}}</h5>
                   <div class="d-flex flex-row">
-                    <div class="text-danger mb-1 me-2">
+                    <div class="text-danger mb-1 ">
                       <i class="fa fa-star"></i>
                       <i class="fa fa-star"></i>
                       <i class="fa fa-star"></i>
@@ -34,20 +34,13 @@
                     </div>
                     <span>{{product.catagory}}</span>
                   </div>
+
                   <div class="mt-1 mb-0 text-muted small">
-                    <span>100% cotton</span>
-                    <span class="text-primary"> • </span>
-                    <span>Light weight</span>
-                    <span class="text-primary"> • </span>
-                    <span>Best finish<br /></span>
+                    <div class="price d-flex flex-row align-items-center"> <span class="act-price" style="color: green;"><i class="bi bi-star-fill"></i></span>
+                      <div class="mx-2"> <span>1</span> </div>
                   </div>
-                  <div class="mb-2 text-muted small">
-                    <span>Unique design</span>
-                    <span class="text-primary"> • </span>
-                    <span>For men</span>
-                    <span class="text-primary"> • </span>
-                    <span>Casual<br /></span>
                   </div>
+
                   <p class="text-truncate mb-4 mb-md-0">
                     {{product.dis}}
                   </p>
