--- a/multyvender/src/app/component/user/user.component.html
+++ b/multyvender/src/app/component/user/user.component.html
@@ -71,8 +71,9 @@
                                             <td *ngIf="email == order.cusid && order.productid == product._id" style="color: white;">{{product.price}}</td>
                                             <td *ngIf="email == order.cusid && order.productid == product._id" style="color: white;"><img src="{{product.img}}" width="60px" alt=""></td>
                                             <td *ngIf="email == order.cusid && order.productid == product._id" style="color: white;">{{product.seller}}</td>
-                                            <td *ngIf="email == order.cusid && order.productid == product._id" style="color: white;"><button type="button" class="btn btn-success mx-2">Positive</button>
-                                                <button type="button" class="btn btn-danger mx-2">Negative</button> </td>
+                                            <td *ngIf="email == order.cusid && order.productid == product._id" style="color: white;">
+                                                <button type="button" class="btn btn-success mx-2" (click)="addrate(product._id)">Positive</button>
+
 
 
                                         </tr>
