--- a/multyvender/src/app/component/usersidebar/usersidebar.component.html
+++ b/multyvender/src/app/component/usersidebar/usersidebar.component.html
@@ -58,7 +58,7 @@
 
     <!-- Nav Item - Message -->
     <li class="nav-item">
-        <a class="nav-link" href="tables.html">
+        <a class="nav-link" [routerLink]="['/userchat']">
             <i class="fas fa-fw fa-table"></i>
             <span>Message</span></a>
     </li>
