--- a/multyvender/src/app/component/chat/chat.component.html
+++ b/multyvender/src/app/component/chat/chat.component.html
@@ -37,6 +37,9 @@
                 </nav>
                 <!-- End of Topbar -->
 
+                <div class="cont">
+
+                    <h3 class="mx-4">Chat with seller</h3>
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
 
@@ -68,6 +71,7 @@
                     </div>
                 </div>
 
+                </div>
             <!-- Footer -->
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
