--- a/multyvender/src/app/component/userchat/userchat.component.html
+++ b/multyvender/src/app/component/userchat/userchat.component.html
@@ -1,4 +1,5 @@
 
+
     <!-- Page Wrapper -->
     <div id="wrapper">
 
@@ -8,7 +9,7 @@
 
 
         <!-- Content Wrapper -->
-        <div id="content-wrapper" class="d-flex flex-column">
+        <div id="content-wrapper" class="d-flex flex-column" >
 
             <!-- Main Content -->
             <div id="content">
@@ -37,6 +38,10 @@
                 </nav>
                 <!-- End of Topbar -->
 
+
+                <div class="cont">
+
+                <h3 class="mx-4">Chat with seller</h3>
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
 
@@ -62,11 +67,15 @@
                           (keyup)="$event.keyCode == 13 && sendMessage()"
                         />
                       </div>
-                      <div class="col">
+                      <div class="col mb-4 mx-5">
                         <button (click)="sendMessage()" class="btn btn-primary">Send Message</button>
                       </div>
                     </div>
                 </div>
+
+
+            </div>
+
 
             <!-- Footer -->
             <footer class="sticky-footer bg-white">
@@ -108,3 +117,5 @@
             </div>
         </div>
     </div>
+
+    
