--- a/multyvender/src/app/component/user/user.component.html
+++ b/multyvender/src/app/component/user/user.component.html
@@ -28,7 +28,7 @@
 
                         <!-- Nav Item - User Information -->
                         <li class="nav-item dropdown no-arrow">
-                            <button type="button" class="btn btn-danger">Log out</button>
+                            <button (click)="logout()" type="button" class="btn btn-danger">Log out</button>
                         </li>
 
                     </ul>
