--- a/multyvender/src/app/component/additem/additem.component.html
+++ b/multyvender/src/app/component/additem/additem.component.html
@@ -29,6 +29,9 @@
 
                         <!-- Nav Item - User Information -->
                         <li class="nav-item dropdown no-arrow">
+                            <button type="button" class="btn btn-success">Home</button>
+                        </li>
+                        <li class="nav-item dropdown no-arrow mx-2">
                             <button type="button" class="btn btn-danger">Log out</button>
                         </li>
 
