--- a/multyvender/src/app/component/admin/admin.component.html
+++ b/multyvender/src/app/component/admin/admin.component.html
@@ -29,6 +29,9 @@
 
                         <!-- Nav Item - User Information -->
                         <li class="nav-item dropdown no-arrow">
+                            <button type="button" class="btn btn-success">Home</button>
+                        </li>
+                        <li class="nav-item dropdown no-arrow mx-2">
                             <button type="button" class="btn btn-danger">Log out</button>
                         </li>
 
@@ -161,6 +164,7 @@
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
                     <a class="btn btn-primary" href="login.html">Logout</a>
                 </div>
+                
             </div>
         </div>
     </div>
