--- a/multyvender/src/app/component/shop/shop.component.html
+++ b/multyvender/src/app/component/shop/shop.component.html
@@ -53,7 +53,7 @@
                   <h6 class="text-success">Free shipping</h6>
                   <div class="d-flex flex-column mt-4">
                     <button class="btn btn-primary btn-sm" type="button" [routerLink]="['/product/', product._id]">Details</button>
-                    <button class="btn btn-outline-primary btn-sm mt-2" type="button">
+                    <button class="btn btn-outline-primary btn-sm mt-2" type="button" [routerLink]="['/chat/']">
                       Contact Seller
                     </button>
                   </div>
