--- a/multyvender/src/app/component/admin/admin.component.html
+++ b/multyvender/src/app/component/admin/admin.component.html
@@ -31,8 +31,8 @@
                         <li class="nav-item dropdown no-arrow">
                             <button type="button" class="btn btn-success" [routerLink]="['/home']">Home</button>
                         </li>
-                        <li class="nav-item dropdown no-arrow mx-2">
-                            <button type="button" class="btn btn-danger">Log out</button>
+                        <li class="nav-item dropdown no-arrow">
+                            <button (click)="logout()" type="button" class="btn btn-danger mx-2">Log out</button>
                         </li>
 
                     </ul>
