--- a/multyvender/src/app/component/nav/nav.component.html
+++ b/multyvender/src/app/component/nav/nav.component.html
@@ -28,8 +28,10 @@
           <a class="nav-link" [routerLink]="['/cart']"><i class="bi bi-bag-check-fill"></i></a>
         </li>
 
-        <button type="button" class="btn btn-success mx-2" [routerLink]="['/user']">Dashboard</button>
-        <button type="button" class="btn btn-danger">Log out</button>
+        <button type="button" class="btn btn-success " [routerLink]="['/user']">Dashboard</button>
+        <li class="nav-item dropdown no-arrow mx-2">
+          <button (click)="logout()" type="button" class="btn btn-danger mx-2">Log out</button>
+      </li>
 
         <!-- <li class="nav-item dropdown">
 
