--- a/multyvender/src/app/component/updateitem/updateitem.component.html
+++ b/multyvender/src/app/component/updateitem/updateitem.component.html
@@ -32,7 +32,7 @@
                             <button type="button" class="btn btn-success" [routerLink]="['/home']">Home</button>
                         </li>
                         <li class="nav-item dropdown no-arrow mx-2">
-                            <button type="button" class="btn btn-danger">Log out</button>
+                            <button (click)="logout()" type="button" class="btn btn-danger mx-2">Log out</button>
                         </li>
 
                     </ul>
